--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
     </form>
     
     <footer class="footer">
-        &copy; | 2021 | <a href="https://lightway.netfi.tech/" target="_blank">LightWay</a>  - All rights reserved
+        &copy; | 2021 | <a href="LightWay">LightWay</a>  - All rights reserved.
     </footer>
 </body>
 </html>
